force-app/main/default/objects/Activity/fields/Activity_with_Contact__c.field-meta.xml
<CustomField>
    <fullName>Activity_with_Contact__c</fullName>
    <formula>BEGINS(WhoId, &apos;003&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Activity with Contact</label>
    <type>Checkbox</type>
</CustomField>