force-app/main/default/objects/Activity/fields/ao2__MAP__c.field-meta.xml
<CustomField>
    <fullName>ao2__MAP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MAP</label>
    <type>Checkbox</type>
</CustomField>