force-app/main/default/objects/Activity/fields/Contact_Method__c.field-meta.xml
<CustomField>
    <fullName>Contact_Method__c</fullName>
    <description>Contact Method was used in KAR. This field should be used only for Data Migration.</description>
    <label>Contact Method</label>
    <length>50</length>
    <type>Text</type>
</CustomField>