force-app/main/default/objects/Activity/fields/CRC_Comment_Author__c.field-meta.xml
<CustomField>
    <fullName>CRC_Comment_Author__c</fullName>
    <label>Note Author</label>
    <length>50</length>
    <type>Text</type>
</CustomField>