force-app/main/default/objects/Activity/fields/CRC_Comment_DateTime__c.field-meta.xml
<CustomField>
    <fullName>CRC_Comment_DateTime__c</fullName>
    <label>Note DateTime</label>
    <type>DateTime</type>
</CustomField>