force-app/main/default/objects/Activity/fields/CRC_Comment_Datetime_Text__c.field-meta.xml
<CustomField>
    <fullName>CRC_Comment_Datetime_Text__c</fullName>
    <label>CRC Comment Datetime Text</label>
    <length>100</length>
    <type>Text</type>
</CustomField>