force-app/main/default/objects/Activity/fields/CRC_Comment_ID__c.field-meta.xml
<CustomField>
    <fullName>CRC_Comment_ID__c</fullName>
    <label>Note ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>