force-app/main/default/objects/Activity/fields/CRC_Note_Category__c.field-meta.xml
<CustomField>
    <fullName>CRC_Note_Category__c</fullName>
    <label>Note Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ASN</fullName>
                <label>Assignment</label>
            </value>
            <value>
                <fullName>DSP</fullName>
                <label>Dispatch</label>
            </value>
            <value>
                <fullName>RLS</fullName>
                <label>Release</label>
            </value>
            <value>
                <fullName>RLP</fullName>
                <label>Release Problem</label>
            </value>
            <value>
                <fullName>FIN</fullName>
                <isActive>false</isActive>
                <label>FIN</label>
            </value>
            <value>
                <fullName>MIN</fullName>
                <isActive>false</isActive>
                <label>MIN</label>
            </value>
            <value>
                <fullName>SP</fullName>
                <isActive>false</isActive>
                <label>SP</label>
            </value>
            <value>
                <fullName>TTL</fullName>
                <isActive>false</isActive>
                <label>TTL</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>