force-app/main/default/objects/Activity/fields/FTF_Contact_Quality__c.field-meta.xml
<CustomField>
    <fullName>FTF_Contact_Quality__c</fullName>
    <label>FTF Contact Quality</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1-Star-Gate Keeper</fullName>
                <default>true</default>
                <label>1-Star-Gate Keeper</label>
            </value>
            <value>
                <fullName>2-Star-Influencer</fullName>
            </value>
            <value>
                <fullName>3-Star-Decision Maker</fullName>
            </value>
            <value>
                <fullName>4 Star-Owner/GM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>