force-app/main/default/objects/Activity/fields/KAR_ID__c.field-meta.xml
<CustomField>
    <fullName>KAR_ID__c</fullName>
    <description>Salesforce KAR ID</description>
    <label>KAR ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>