force-app/main/default/objects/Activity/fields/KAR_OwnerID__c.field-meta.xml
<CustomField>
    <fullName>KAR_OwnerID__c</fullName>
    <description>KAR Salesforce Owner ID</description>
    <label>KAR OwnerID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>