force-app/main/default/objects/Activity/fields/KAR_WhatID__c.field-meta.xml
<CustomField>
    <fullName>KAR_WhatID__c</fullName>
    <description>KAR Salesforce What ID</description>
    <label>KAR WhatID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>