force-app/main/default/objects/Activity/fields/KAR_WhoID__c.field-meta.xml
<CustomField>
    <fullName>KAR_WhoID__c</fullName>
    <description>KAR Salesforce WhoID</description>
    <label>KAR WhoID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>