force-app/main/default/objects/Activity/fields/lco1__PMO_Goal__c.field-meta.xml
<CustomField>
    <fullName>lco1__PMO_Goal__c</fullName>
    <description>PMO Goal</description>
    <inlineHelpText>PMO Goal</inlineHelpText>
    <label>PMO Goal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>