force-app/main/default/objects/Activity/fields/Meaningful_Conversation__c.field-meta.xml
<CustomField>
    <fullName>Meaningful_Conversation__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if this conversation was meaningful in the sales process.</inlineHelpText>
    <label>Meaningful Conversation</label>
    <type>Checkbox</type>
</CustomField>