force-app/main/default/objects/Activity/fields/Release_Problem_Code__c.field-meta.xml
<CustomField>
    <fullName>Release_Problem_Code__c</fullName>
    <label>Release Problem Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CNN</fullName>
                <label>Charge Negotiation Needed</label>
            </value>
            <value>
                <fullName>CRT</fullName>
                <label>Cancel Request</label>
            </value>
            <value>
                <fullName>FUT</fullName>
                <label>Future Release Date</label>
            </value>
            <value>
                <fullName>PST</fullName>
                <label>Provider Special Team</label>
            </value>
            <value>
                <fullName>SFR</fullName>
                <label>Special Form Required</label>
            </value>
            <value>
                <fullName>VCL</fullName>
                <label>Vehicle Cannot be Located</label>
            </value>
            <value>
                <fullName>BAR</fullName>
                <label>Branch Action Required</label>
            </value>
            <value>
                <fullName>CNA</fullName>
                <label>Call Not Answered</label>
            </value>
            <value>
                <fullName>NIM</fullName>
                <label>Necessary Information Is Missing</label>
            </value>
            <value>
                <fullName>ORP</fullName>
                <label>Owner Requested to Remove Personal Items Prior to Pickup</label>
            </value>
            <value>
                <fullName>OUS</fullName>
                <label>Owner Unaware of Total Loss Status</label>
            </value>
            <value>
                <fullName>RQR</fullName>
                <label>SL Recovery Quote Requested</label>
            </value>
            <value>
                <fullName>CNR</fullName>
                <label>Storage Location Delay - Charges Not Ready</label>
            </value>
            <value>
                <fullName>DOL</fullName>
                <label>Storage Location Delay - DOL Conflict</label>
            </value>
            <value>
                <fullName>INC</fullName>
                <label>Storage Location Delay - Inspection Not Complete</label>
            </value>
            <value>
                <fullName>ORR</fullName>
                <label>Storage Location Delay - Owner Release Required</label>
            </value>
            <value>
                <fullName>PRR</fullName>
                <label>Storage Location Delay - Provider Release Required</label>
            </value>
            <value>
                <fullName>WOS</fullName>
                <label>Storage Location Delay - Waiting On Settlement Check</label>
            </value>
            <value>
                <fullName>TCA</fullName>
                <label>Tear Down Charge Needs Approval</label>
            </value>
            <value>
                <fullName>TAA</fullName>
                <label>Total Advance Charges Need Approval</label>
            </value>
            <value>
                <fullName>VEI</fullName>
                <label>Vehicle Inaccessible</label>
            </value>
            <value>
                <fullName>SIP</fullName>
                <label>SL Scouting In Progress</label>
            </value>
            <value>
                <fullName>RQA</fullName>
                <label>SL Wait Recovery Quote Approval</label>
            </value>
            <value>
                <fullName>SLL</fullName>
                <label>Special Lines</label>
            </value>
            <value>
                <fullName>AA</fullName>
                <isActive>false</isActive>
                <label>AA</label>
            </value>
            <value>
                <fullName>LDE</fullName>
                <isActive>false</isActive>
                <label>LDE</label>
            </value>
            <value>
                <fullName>OAR</fullName>
                <isActive>false</isActive>
                <label>OAR</label>
            </value>
            <value>
                <fullName>ODE</fullName>
                <isActive>false</isActive>
                <label>ODE</label>
            </value>
            <value>
                <fullName>OTH</fullName>
                <isActive>false</isActive>
                <label>OTH</label>
            </value>
            <value>
                <fullName>PCR</fullName>
                <isActive>false</isActive>
                <label>PCR</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>