force-app/main/default/objects/Activity/fields/RP_Follow_Up_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>RP_Follow_Up_Date_Time__c</fullName>
    <label>RP Follow Up Date Time</label>
    <type>DateTime</type>
</CustomField>