force-app/main/default/objects/Activity/fields/RP_Last_Worked_DateTime__c.field-meta.xml
<CustomField>
    <fullName>RP_Last_Worked_DateTime__c</fullName>
    <label>RP Last Worked DateTime</label>
    <type>DateTime</type>
</CustomField>