force-app/main/default/objects/Activity/fields/RP_Resolved__c.field-meta.xml
<CustomField>
    <fullName>RP_Resolved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RP Resolved?</label>
    <type>Checkbox</type>
</CustomField>