force-app/main/default/objects/Activity/fields/RP_Resolved_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>RP_Resolved_Date_Time__c</fullName>
    <label>RP Resolved Date Time</label>
    <type>DateTime</type>
</CustomField>