force-app/main/default/objects/Activity/fields/Topic__c.field-meta.xml
<CustomField>
    <fullName>Topic__c</fullName>
    <label>Topic</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bidder Growth</fullName>
            </value>
            <value>
                <fullName>Reactivation</fullName>
            </value>
            <value>
                <fullName>Licensing and Renewals</fullName>
            </value>
            <value>
                <fullName>Local Tow</fullName>
            </value>
            <value>
                <fullName>Long Haul</fullName>
            </value>
            <value>
                <fullName>International</fullName>
            </value>
            <value>
                <fullName>Floorplan Utilization</fullName>
            </value>
            <value>
                <fullName>Floorplan Existing to IAA</fullName>
            </value>
            <value>
                <fullName>Floorplan New to IAA</fullName>
            </value>
            <value>
                <fullName>Inspection Reports</fullName>
            </value>
            <value>
                <fullName>Bidding</fullName>
            </value>
            <value>
                <fullName>Buying</fullName>
            </value>
            <value>
                <fullName>Filtering and Searching</fullName>
            </value>
            <value>
                <fullName>Buyer Training</fullName>
            </value>
            <value>
                <fullName>New Buyer Onboarding</fullName>
            </value>
            <value>
                <fullName>Broker Fees</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>